# aeacus

./: Dockerfile  LICENSE  README.md  pyproject.toml
aeacus/: __init__.py  profiler.py
model/: config.json  train_mean.npy  train_std.npy
results/gold/: CCL.ipynb  TSE.ipynb
results/silver/: GSE116256.ipynb  GSE124395.ipynb  GSE274880.ipynb  GSE275071.ipynb  GSE81383.ipynb
