[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aeacus"
version = "0.6.0"
description = "single cell malignancy profiling through mixture of experts."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "anndata",
    "numpy",
    "pandas",
    "scanpy",
    "scipy",
    "torch",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["aeacus*"]

[tool.setuptools.package-data]
aeacus = ["model/*"]
